--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-cron": "^3.0.2",
     "path": "^0.12.7",
     "request": "^2.88.2",
+    "twilio": "^3.82.2",
     "uuid": "^9.0.0"
   }
 }
