--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   }
 }
