--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.5",
     "node-cron": "^3.0.2",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "request": "^2.88.2",
     "twilio": "^3.82.2",
